@@ -2,7 +2,7 @@ AUX libwiimote-9999-ldflags.patch 1375 RMD160 f86c512876f8a492e8a1d1b639b139164e
 AUX libwiimote-amd64.patch 397 RMD160 b51df3594b6f2c2e1d3772abb1cf663db1d5243d SHA1 f34d5ffdb87d78118399af5e3cb2f91772fe962e SHA256 bb100931e55920017247e4835e153b8c370a8490a8a451e56af6669aa14b4a02
 AUX libwiimote-as-needed.patch 496 RMD160 24d5c589b6c15cfcc0701279c7af67f9921c0b3f SHA1 c45b90c9831b5f94f0726d37f47f3f23578c88df SHA256 550e482c40662970777eada373c79cecc169916af6dd3a42d22a2f84f5e92a44
 DIST libwiimote-0.4.tgz 30857 RMD160 4fefc82cd577404a9aefda2d40144cb2c6d9c6c8 SHA1 79b1639d481b35eb6df7b83877f9438944ec389c SHA256 a1e9d45a0d4dd367f1371dd477e30ecaa95e59b9fb8635dc9e7f26e4eb231d90
-EBUILD libwiimote-0.4.ebuild 926 RMD160 920f9c95fd9bbbee9716d1c1271af644ce745b36 SHA1 6677fa8777027aa3ca0804e747315999285afddb SHA256 7feab43a0a20be067893e2c91704c9c9e1691f97a00e84e1d8a51d81d3b0d06a
-EBUILD libwiimote-9999.ebuild 964 RMD160 b9e7a65586d1b48de8e6fd37bdf946da322b058a SHA1 5d21efb9727205bb23823eb3fef103db487810b4 SHA256 62b0bdc8bf5aae899dee87a728e5fac7696a77821efb122d405fc77baa797ac3
-MISC ChangeLog 826 RMD160 f7f87cbf61bf8d61034fe1a826543f89bb6fd922 SHA1 6ea89667a5e66e75870c781fcae910727b6dee1f SHA256 4cf3fcf5a77e0c7e7f1934188e2ab7ff2807db7e6dc6c4bc0dc48b68ac80c506
+EBUILD libwiimote-0.4.ebuild 1027 RMD160 82c414470b8afb45e82f554d1c47eff63cb7a4b5 SHA1 38d694bc75a7caeafe2d4af8243d9df24ca34963 SHA256 a87176e1fa8fd7197f502815024f28895ee65760b0813869e5dd1cf5830c6ffc
+EBUILD libwiimote-9999.ebuild 921 RMD160 e605f2b4b51a8e9880b6e64352e06e3b1e5a3d74 SHA1 ed610202a2dfaed45177d6fef1213a73a9b90361 SHA256 56b7e26bba6a2f8cf301db20d4a276f6f2ef5a654a7a886de63816e879741f67
+MISC ChangeLog 1065 RMD160 099b0d351ceaf95e495461583869fb6aeef07cc9 SHA1 9be6267fcd09780e7984a57f4b8b82b5987f392c SHA256 94cf14ecd068a77811f0100acbb32b45812d15ca91dfd3d33b361cf393927b17
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
